# RegresionLineal

./: README.md  pyproject.toml
app/: main.py  model.pkl  training_data.json
app/helpers/: Datamanage.py  dataframe_helper.py
app/models/: data_models.py
app/routers/: predict.py  startup.py  train.py
app/services/: regression_service.py
